# ai-autonomous-driving-competition-2026

./: .gitignore  README.md  readme.md
arduino_code/: manual_drive.ino  ultrasonic_6_sensors.ino
drive_control/: README.md  package.xml  setup.py
drive_control/drive_control/: check_packet.py  drive_control_node.py
drive_control/launch/: controller_drive.launch.py
hardware/: README.md  package.xml  setup.py
hardware/config/: camera.yaml  lidar.yaml  manual_controller.yaml  motor.yaml  ultrasonic.yaml
hardware/hardware/: camera_calibration_node.py  camera_node.py  camera_pose_check_node.py  camera_viewer_node.py  controller_viewer_node.py  hsv_tuner_node.py  joy_to_motor_node.py  lidar_node.py  lidar_viewer_node.py  manual_controller_node.py  serial_port.py  ultrasonic_node.py  ultrasonic_viewer_node.py
hardware/launch/: bag_visualization.launch.py  camera_calibration.launch.py  camera_pose_check.launch.py  controller_drive.launch.py  sensors.launch.py  sensors_bag.launch.py  sensors_controller_bag.launch.py  visualization.launch.py
lane_main/: README.md  package.xml  setup.cfg
lane_main/lane_main/: mission_lane_main_node.py  timed_lane_main_node.py
lane_main/launch/: mission_lane_main.launch.py  timed_lane_main.launch.py  timed_lane_main_bag.launch.py  timed_lane_main_ngg.launch.py
lane_offset/: README.md  package.xml  setup.cfg  setup.py
lane_offset/lane_offset/: lane_offset_debug_viewer_node.py  mission_lane_offset_node.py  mission_lane_offset_node_osy.py  timed_lane_offset_node.py  timed_lane_offset_node_ngg.py  timed_lane_offset_node_osy.py
lane_offset/launch/: timed_lane_offset.launch.py
lane_offset/scripts/: calibrate_left_offset.py
parking/: README.md  package.xml  setup.cfg  setup.py
parking/config/: parking.yaml
parking/launch/: mission_parking.launch.py  parking.launch.py
parking/parking/: camera_assist.py  geometry.py  lidar_slot_detector.py  models.py  parking_fsm.py  parking_node.py  parking_node_osy.py  slot_fusion.py  ultrasonic_safety.py
parking/test/: test_lidar_slot_detector.py  test_parking_node_osy_sequence.py
ros2_ws/src/drive_control/: package.xml
ros2_ws/src/hardware/: setup.py
ros2_ws/src/hardware/config/: lidar.yaml  manual_controller.yaml
ros2_ws/src/lane_main/: setup.py
ros2_ws/src/lane_offset/: setup.py
ros2_ws/src/parking/: setup.py
sensor_topic/: README.md  package.xml  setup.cfg  setup.py
sensor_topic/config/: camera.yaml
sensor_topic/launch/: sensors.launch.py
sensor_topic/sensor_topic/: camera_node.py  controller_node.py  lidar_node.py  ultrasonic_node.py
sensor_utils/: README.md  package.xml  setup.cfg  setup.py
sensor_utils/config/: controller.yaml
sensor_utils/launch/: bag_visualization.launch.py  camera_calibration.launch.py  camera_pose_check.launch.py  sensor_visualization.launch.py  sensors_bag.launch.py  sensors_controller_bag.launch.py
sensor_utils/resource/: sensor_utils
sensor_utils/sensor_utils/: camera_viewer_node.py  controller_viewer_node.py  hsv_tuner_node.py  joy_to_motor_node.py  lidar_viewer_node.py
(+18 files in other folders)
