<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive_control</name>
  <version>0.0.0</version>
  <description>Manual controller to Arduino drive control bridge.</description>
  <maintainer email="hailab@example.com">hailab</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
