<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_utils</name>
  <version>0.0.0</version>
  <description>Sensor visualization, calibration, bag, and controller utility nodes.</description>
  <maintainer email="hailab@example.com">hailab</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>sensor_topic</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
